# tcg

./: .gitignore  README.md  build_index.py  codegen_crops.py  index.html  stage_symbol_models.py
src/: camera.js  cardIndex.js  cropRegions.js  detector.js  fuzzyMatch.js  main.js  wasmFeatureDetect.js  wasmLoader.js
static/index/: pokemon.json  yugioh.json
static/labels/: symbol_mtg_labels.json  symbol_pokemon_labels.json
static/model/: cards.js  cards.wasm
wasm_ncnn/: CMakeLists.txt
wasm_ncnn/include/: crop_regions.h
wasm_ncnn/src/: main.cpp
